@@ -17,12 +17,6 @@
 
 #include <rtems.h>
 
-rtems_task Init(
-  rtems_task_argument ignored
-)
-{
-}
-
 int main( int, char **, char **);
 
 /* configuration information */
@@ -42,4 +36,34 @@ int main( int, char **, char **);
 
 #include <rtems/confdefs.h>
 
-/* global variables */
+/* Loopback Network Configuration */
+#if defined(RTEMS_NETWORKING)
+  #include <rtems/rtems_bsdnet.h>
+  #include <sys/socket.h>
+  #include <netinet/in.h>
+
+  extern int rtems_bsdnet_loopattach(struct rtems_bsdnet_ifconfig *, int);
+
+  static struct rtems_bsdnet_ifconfig loopback_config = {
+      "lo0",                     /* name */
+      rtems_bsdnet_loopattach,   /* attach function */
+      NULL,                      /* link to next interface */
+      "127.0.0.1",               /* IP address */
+      "255.0.0.0",               /* IP net mask */
+  };
+
+  struct rtems_bsdnet_config rtems_bsdnet_config = {
+      &loopback_config,       /* Network interface */
+      NULL,                   /* Use fixed network configuration */
+      0,                      /* Default network task priority */
+      0,                      /* Default mbuf capacity */
+      0,                      /* Default mbuf cluster capacity */
+      "testSystem",           /* Host name */
+      "nowhere.com",          /* Domain name */
+      "127.0.0.1",            /* Gateway */
+      "127.0.0.1",            /* Log host */
+      {"127.0.0.1" },         /* Name server(s) */
+      {"127.0.0.1" },         /* NTP server(s) */
+  };
+#endif
+
